:bug: GCW-3707-Remove offer details for offers that is unshared or deleted

--- a/app/styles/templates/_offers.scss
+++ b/app/styles/templates/_offers.scss
@@ -111,6 +111,10 @@
   background-color: #26446C;
   margin-top:1rem;
   padding:0.6rem;
+
+  &.disabled{
+    display: none;
+  }
 }
 
 .image-tab{
