--- a/app/templates/offers/messages.hbs
+++ b/app/templates/offers/messages.hbs
@@ -128,7 +128,7 @@
                       {{#validatable-form class="form-horizontal" onSubmit=(action 'sendMessage') as |form|}}
                         <div class="row ui">
                           <div class="small-9 large-10 medium-9 columns">
-                            {{variable-height-textarea disabled=(is-not isChatVisible) value=body name="body" required="true"  parentDiv="message-section"}}
+                            {{variable-height-textarea disabled=(is-not isChatVisible) value=body name="body" required="true" placeholder=(unless isChatVisible (t "shareableOffers.disabled_chat")) parentDiv="message-section"}}
                           </div>
                           <div class="small-3 large-2 medium-3 columns">
                             {{#if isChatVisible}}
