:lipstick: GCW-3722- Add more details to offer details page

--- a/app/styles/templates/_offers.scss
+++ b/app/styles/templates/_offers.scss
@@ -55,7 +55,8 @@
 
   .offer_display{
     display: flex;
-    border-bottom: 1px solid #334f75
+    border-bottom: 1px solid #334f75;
+    margin-bottom: 1.18rem;
   }
 
   .offer_view{
