--- a/app/templates/orders/goods.hbs
+++ b/app/templates/orders/goods.hbs
@@ -47,6 +47,7 @@
 
 							{{#each orderedGoods as |good|}}
 								<div class="row product-row">
+									{{#if good.record}}
 									{{#if good.record.isSet}}
 										<div class="row">
 									    <div class="small-6 columns cart-redirect-link set-header">
@@ -74,6 +75,7 @@
 											<div class="notes">{{ good.record.package.notes }}</div>
 											<div class="notes">{{t 'order.goods_details.quantity_label'}} : {{ good.record.package.orderedQuantity}}</div>
 										</div>
+									{{/if}}
 									{{/if}}
 								</div>
 							{{/each}}
