:bug: Fix route issue of offer responses from notification tab

--- a/app/templates/my_notifications.hbs
+++ b/app/templates/my_notifications.hbs
@@ -51,7 +51,7 @@
                               - {{notification.order.beneficiary.fullName}}
                             {{/if}}
                           {{else}}
-                            Offer {{notification.offerId}}
+                            Offer {{notification.offerResponse.offerId}}
                           {{/if}}
                         </div>
 
