--- a/app/templates/package_set.hbs
+++ b/app/templates/package_set.hbs
@@ -94,23 +94,25 @@
         </p>
         {{/each}}
         {{#if packageUnavailableInSet}}
-        <button class="request-item disabled" disabled> {{t "item.request_item"}} </button>
-        <i class="item-unavailable"> {{t "item.unavailable_item"}} </i>
+          <button class="request-item disabled" disabled> {{t "item.request_item"}} </button>
+          <i class="item-unavailable"> {{t "item.unavailable_item"}} </i>
         {{else if isPackagePartOfSet}}
-        <button class="request-item disabled" disabled> {{t "item.request_item"}} </button>
+          <button class="request-item disabled" disabled> {{t "item.request_item"}} </button>
         {{else if presentInCart}}
-        <button class="request-item" {{action 'remove' model  target=cart}}> {{t "item.remove_item"}} </button>
+         <button class="request-item" {{action 'remove' model  target=cart}}> {{t "item.remove_item"}} </button>
+        {{else if (is-equal model.computedMaxOrderQuantity 0)}}
+          <button class="request-item disabled" disabled> {{t "item.request_item"}} </button>
         {{else}}
-        <div class="row quantity-fields">
-          <div class="small-4 medium-4 large-4 columns">
-            <button class="request-item" {{action 'add' model requestedQty target=cart}}> {{t "item.request_item"}} </button>
+          <div class="row quantity-fields">
+            <div class="small-4 medium-4 large-4 columns">
+              <button class="request-item" {{action 'add' model requestedQty target=cart}}> {{t "item.request_item"}} </button>
+            </div>
+            {{#unless (is-equal model.isSet true)}}
+            <div class=" small-4 large-4 medium-4 columns widget">
+              {{quantity-widget package=package type="request" requestAction=(action 'setRequestedQty')}}
+            </div>
+            {{/unless}}
           </div>
-          {{#unless (is-equal model.isSet true)}}
-          <div class=" small-4 large-4 medium-4 columns widget">
-            {{quantity-widget package=package type="request" requestAction=(action 'setRequestedQty')}}
-          </div>
-          {{/unless}}
-        </div>
         {{/if}}
 
         <div class="item_details item_categories">
