--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -12,14 +12,20 @@
         </section>
       </nav>
 
-      {{#unless cart.isEmpty}}
-      {{small-cart-toggle-view}}
-      {{/unless}}
-
       {{#validatable-form onSubmit=(action 'resendPin') as |form|}}
       <div class="row">
         <div class="small-12 large-11 columns">
           <div class="mobile center_align">
+
+            <div class="row">
+              <div class="small-12 columns">
+                <p>{{t "login.explanation"}}</p>
+                {{#link-to "about"}}
+                  <p>{{t "login.explanation_read_more_link"}}</p>
+                {{/link-to}}
+              </div>
+            </div>
+
             <div class="row">
               <div class="small-12 columns">
                 <label class="form-label title-label">{{t "login.get_started"}}</label>
@@ -63,5 +69,4 @@
 
     </section>
   </div>
-  {{partial "cart_content/checkout_full_view"}}
 </div>
