Added explanation text to top of browse page.

--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -13,13 +13,10 @@
 </nav>
 
 <section class="main-section">
-  <div class="row home_section show-for-small small light">
+  <div class="row">
     <div class="small-12 columns">
-      <label class="form-label browse-label">
-        <i class="fa">{{fa-icon 'exclamation-triangle'}}</i>
-        {{t 'browse.intro_text'}}
-        {{#link-to "faq" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}
-      </label>
+      <p>{{t 'browse.intro_text'}}
+         {{#link-to "faq" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}</p>
     </div>
   </div>
   <div class="row">
