--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="small-12 columns">
       <p>{{t 'browse.intro_text'}}
-         {{#link-to "faq" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}</p>
+         {{#link-to "about" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}</p>
     </div>
   </div>
   <div class="row">
