--- a/app/styles/_about.scss
+++ b/app/styles/_about.scss
@@ -6,7 +6,7 @@
   }
   position: relative;
   color: white;
-  text-align: center;
+  text-align: left;
   padding: 1em;
   border-bottom: 1px solid #334f75;
 
@@ -14,21 +14,17 @@
     text-align: center;
   }
 
-  .intro_text {
-    text-align: left;
-  }
-
   // Content
   .section_subtitle{
-    text-align: center;
-    padding-bottom: 3%;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
     @media #{small-only}{
       width: 100%;
     }
     @media #{large-only} {
       width: 80%;
     }
-    border-bottom: 1px solid;
+    border-top: 1px solid;
   }
   .section_title, .section_subtitle{
     font-family: $header-font-family;
@@ -40,30 +36,7 @@
   }
 
   .section_text {
-    text-align: left;
-    @media #{$large-only}{
-      padding-left: 2rem;
-      padding-right: 0.5rem;
-    }
     margin: 1em auto;
-    max-width: 30rem;
-
-    .step {
-      @extend .small;
-      @extend .light;
-
-      margin-top: 1rem;
-
-      .bullet {
-        padding-left: 1rem;
-      }
-
-      &.transport_option {
-        margin-top: 0;
-        text-indent: -1em;
-        padding: 1rem 1em 0.1em 1em;
-      }
-    }
   }
 
   // Helpers
@@ -75,7 +48,7 @@
       padding-right: 2rem;
       text-transform: uppercase;
       margin-top: 1rem;
-      font-size: 0.7em;
+      font-size: 0.9em;
       .fa {
         margin-right: 10px;
       }
@@ -100,5 +73,16 @@
 
   a {
     text-decoration: underline;
+  }
+
+  ul.list-alpha {
+    list-style-type: lower-alpha;
+  }
+
+  ul.fa-bullets {
+    list-style-type: none;
+    i {
+      margin-right: 0.8rem;
+    }
   }
 }
