Login page text toggles for Book Appointment

--- a/app/styles/templates/_login.scss
+++ b/app/styles/templates/_login.scss
@@ -235,3 +235,9 @@ input:-webkit-autofill {
     width: 96.5% !important;
   }
 }
+
+.info_box {
+  margin-bottom: 1rem;
+  padding: 1rem!important;
+}
+
