--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -14,7 +14,7 @@
 
 <section class="main-section">
   <div class="row">
-    <div class="small-12 columns">
+    <div class="small-12 columns info_box">
       <p>{{t 'browse.intro_text'}}
          {{#link-to "about" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}</p>
     </div>
