--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -12,7 +12,7 @@
           {{notification-icon}}
         </div>
         <div class="large-6 medium-5 columns intro-text small-centered">
-          <h1>GoodCity For Charities<em class="chinese" lang="zh-hant">好人好巿 (慈善組織)</em></h1>
+          <h1>GoodCity.HK For Charities<em class="chinese" lang="zh-hant">好人好巿 (慈善組織)</em></h1>
         </div>
         {{#if hasCartItems}}
         <div class="cart-icon large-2 medium-2 columns">
