--- a/app/styles/templates/_schedule_details.scss
+++ b/app/styles/templates/_schedule_details.scss
@@ -55,7 +55,7 @@
       padding-right: 1rem;
       font-size: .8rem;
 
-      input {
+      input, select {
         margin: 0;
         background-color: transparent;
         border: 1px solid rgb(163, 170, 182);
