:lipstick: UI: address fields layout fix

--- a/app/styles/templates/_schedule_details.scss
+++ b/app/styles/templates/_schedule_details.scss
@@ -55,6 +55,10 @@
       padding-right: 1rem;
       font-size: .8rem;
 
+      .column:first-child {
+        padding-left: 0;
+      }
+
       input, select {
         margin: 0;
         background-color: transparent;
