--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -155,12 +155,14 @@
             {{input type="text" value=addressAttrs.street classNames="center_align_placeholder" required=false}}
           </div>
           <div class="row input-container">
-            <div>{{t 'order.online_order.address_fields.building'}}</div>
-            {{input type="text" value=addressAttrs.building classNames="center_align_placeholder" required=false}}
-          </div>
-          <div class="row input-container">
-            <div>{{t 'order.online_order.address_fields.flat'}}</div>
-            {{input type="text" value=addressAttrs.flat classNames="center_align_placeholder" required=false}}
+            <div class="column small-6">
+              <div>{{t 'order.online_order.address_fields.building'}}</div>
+              {{input type="text" value=addressAttrs.building classNames="center_align_placeholder" required=false}}
+            </div>
+            <div class="column small-6">
+              <div>{{t 'order.online_order.address_fields.flat'}}</div>
+              {{input type="text" value=addressAttrs.flat classNames="center_align_placeholder" required=false}}
+            </div>
           </div>
           <div class="row input-container">
             <div>{{t 'order.online_order.address_fields.notes'}}</div>
