Hide flat for now

--- a/app/templates/order/schedule_details.hbs
+++ b/app/templates/order/schedule_details.hbs
@@ -159,7 +159,7 @@
               <div>{{t 'order.online_order.address_fields.building'}}</div>
               {{input type="text" value=addressAttrs.building classNames="center_align_placeholder" required=false}}
             </div>
-            <div class="column small-6">
+            <div class="column small-6 hide">
               <div>{{t 'order.online_order.address_fields.flat'}}</div>
               {{input type="text" value=addressAttrs.flat classNames="center_align_placeholder" required=false}}
             </div>
