Show district on offer details

--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -32,6 +32,9 @@
     <div class="offer_display">
       <div class="offer_view">
         <span style="color: white;">
+          District : {{offerDistrict}}
+        </span>
+        <span style="color: white;">
           Notes :
         </span>
         <span>
