--- a/app/templates/offers/detail.hbs
+++ b/app/templates/offers/detail.hbs
@@ -56,7 +56,7 @@
       <ul>
         {{#each model.items as |item|}}
           <div class="row items">
-            {{item-thumbnail-view item=item displayItemOverlay=true}}
+            {{item-thumbnail-view item=item displayItemOverlay=true noResize=true}}
           </div>
           <hr>
         {{/each}}
