--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -17,6 +17,8 @@
     <div class="small-12 columns info_box">
       <p>{{t 'browse.intro_text'}}
          {{#link-to "about" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}</p>
+      <p>{{ t 'browse.ngo_offer' }}
+         <a href="/transportation-funding-ngo-ver-en.pdf" class="underline-link">{{ t 'browse.ngo_offer_description' }} </a></p>
     </div>
   </div>
   <div class="row">
