Fixed ORIGIN URL issue and used it to create link to download pdf. Works better on cordova this way.

--- a/app/templates/browse.hbs
+++ b/app/templates/browse.hbs
@@ -18,7 +18,7 @@
       <p>{{t 'browse.intro_text'}}
          {{#link-to "about" classNames="underline-link"}} {{ t "browse.faq" }} {{/link-to}}</p>
       <p>{{ t 'browse.ngo_offer' }}
-         <a href="/transportation-funding-ngo-ver-en.pdf" class="underline-link">{{ t 'browse.ngo_offer_description' }} </a></p>
+         <a href="{{origin_url}}/transportation-funding-ngo-ver-en.pdf" class="underline-link">{{ t 'browse.ngo_offer_description' }} </a></p>
     </div>
   </div>
   <div class="row">
