--- a/app/templates/privacy.hbs
+++ b/app/templates/privacy.hbs
@@ -1,5 +1,5 @@
 <div class="inner-wrap">
-  <section class="main-section privacy faq_list">
+  <section class="main-section privacy terms-page">
 
     <nav class="tab-bar">
       <section class="left-large">
