--- a/app/templates/terms.hbs
+++ b/app/templates/terms.hbs
@@ -1,5 +1,5 @@
 <div class="inner-wrap">
-  <section class="main-section terms faq_list">
+  <section class="main-section terms terms-page">
 
     <nav class="tab-bar">
       <section class="left-large">
