Delete account feature

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -41,6 +41,7 @@ body {
 @import "templates/loading";
 @import "templates/application";
 @import "templates/browse";
+@import "templates/delete_account";
 @import "templates/package_category";
 @import "templates/item";
 @import "templates/login";
