--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -265,7 +265,7 @@
 }
 .tab-bar h1{
   @media #{$small-only} {
-    font-size: 0.85rem;
+    font-size: 1rem;
   }
 }
 
@@ -296,7 +296,7 @@
 }
 
 .notification {
-  left: 15%;
+  left: 1.5rem;
 }
 
 .cart-icon-with-search {
